# AztecBlocks

./: CMakeLists.txt  CMakeSettings.json  README.md
core/: CMakeLists.txt
core/include/: GameLoop.h  Interfaces.h
core/src/: GameLoop.cpp
main/: CMakeLists.txt
main/include/: BoardState.h  Direction.h  Game.h  GameBoard.h  Tile.h
main/src/: Common.h  Game.cpp  GameBoard.cpp  Program.cpp  hello_vcs.cpp
